Worked on TreasuryDirect page

--- a/CaseStudies/UX_AFA.html
+++ b/CaseStudies/UX_AFA.html
@@ -272,7 +272,7 @@
                 <h6 class="playFair mb-5">
                     To begin our design we had to pinpoint the issues from the current site that we wanted to focus on by conducting a heuristic evaluation.
                 </h6>
-                <div class="d-flex pt-3 pb-5">
+                <div class="d-flex pt-3 pb-5 mb-5">
                     <div class="row col-md-7 pe-md-5 mx-auto">
                         <p class="px-0">
                             We pin-point few of the problems as priorities.
@@ -294,7 +294,7 @@
                 <h6 class="playFair mb-5 pt-5">
                     Afterwards, we compiled a value proposition canvas.
                 </h6>
-                <div class="my-5 col-md-8 mx-auto">
+                <div class="my-5 col-md-7 mx-auto">
                     <p>The Value Proposition Canvas helped us to make sure that the product we are designing is positioned around volunteers&apos; values and needs.</p>
                 </div>
                 <div class="row col-md-9 mt-5 mx-auto">
