--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -144,64 +144,115 @@
                 </div>
 
                 <div class="UXCaseNav row gx-0 mb-5">
-                    <a class="hvr-sweep" href="#TD_Overview">Overview</a>
-                    <a class="hvr-sweep" href="#TD_Ideation">Ideation</a>
+                    <a class="hvr-sweep" href="#TD_Research">Research</a>
                     <a class="hvr-sweep" href="#TD_Analysis">Analysis</a>
+                    <a class="hvr-sweep" href="#TD_Ideation">Ideation</a>
                     <a class="hvr-sweep" href="#TD_Prototyping">Prototyping</a>
                     <a class="hvr-sweep" href="#TD_Final">Final Product</a>
                 </div>
             </div>
 
-        <!-- Overview #########################-->
-            <div class="container px-4 px-lg-5" id="TD_Overview">
+        <!-- Research #########################-->
+            <div class="container px-4 px-lg-5" id="TD_Research">
                 <div class="">
                     <h6 class="leadingLine text-nav text-muted mb-5">
-                        Overview
+                        Research
+                    </h6>
+
+                    <!-- Proto-persona -->
+                    <h6 class="playFair mb-5 pb-4">
+                        We started by developing a proto-persona.
+                    </h6>
+                    <div class="d-flex justify-content-center mb-5">
+                        <div class="col-md-3 align-items-center my-auto">
+                            <div class="py-4">
+                                <p>
+                                    <b>Name:</b> Williams T. Franklin <br>
+                                    <b>Age:</b> 36 years old <br>
+                                    <b>Occupation:</b> Mid-level IT Manager <br>
+                                    <b>Status:</b> Married, 3 kids <br>
+                                    <b>Location:</b> Long Island, NY
+                                </p>
+                            </div>
+                            <div class="py-4">
+                                <p>
+                                    <b>Goals & Needs:</b>
+                                    <ul>
+                                        <li>College funds for the kids</li>
+                                        <li>Retirement</li>
+                                        <li>Passive income investment</li>
+                                        <li>Estate and Wills</li>
+                                    </ul>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-md-5 row px-5">
+                            <img src="../assets/img/UX_TD/jacinto-diego-5kkRYf5oeuA-unsplash.jpg" alt="" class="px-0 shadow rounded-3">
+                        </div>
+                        <div class="col-md-3 align-items-center my-auto">
+                            <div class="py-4">
+                                <p>
+                                    <b>Pain Points:</b>
+                                    <ul>
+                                        <li>Funds locked up for at least 2 years depending on terms</li>
+                                        <li>Best way to invest without too much research</li>
+                                        <li>Inflation outweighs interest rate</li>
+                                    </ul>
+                                </p>
+                            </div>
+                            <div class="py-4">
+                                <p>
+                                    <b>Solutions & Gains</b>
+                                    <ul>
+                                        <li>Avoid middle-man fee</li>
+                                        <li>Has direct control of his investments</li>
+                                        <li>Tax benefits</li>
+                                    </ul>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- User Path -->
+                    <div class="mx-auto col-md-8 my-5 pt-5">
+                        <p class="pt-5 mt-5">After deciding to focus on the individual invest, we were able to determine a <b>typical user path</b> for our proto-persona to focus on (ie. Passive income, retirement plan...). </p>
+                    </div>
+                    <img src="../assets/img/UX_TD/UX_TD_UserPath.png" alt="" class="img-fluid">
+                    
+                    <!-- Heuristic eval -->
+                    <div class="mx-auto col-md-8 mt-5 pt-5">
+                        <p class="pt-5">We then completed a <b>heuristic evaluation</b> of the current site to redline annotate the current problems with accessibility, design, and other issues. Our next step was to <b>interview 5 individuals who would be a typical user</b> of this site and organize our findings based on importance to the user and government agency using Figjam.</p>
+                    </div>
+                    <img src="../assets/img/UX_TD/UX_TD_Heuristic.png" alt="" class="img-fluid">
+                </div>
+            </div>
+        </section>
+
+        <!-- Analysis ######################-->
+        <section id="TD_Analysis">
+            <div class="container px-4 px-lg-5 d-flex">
+                <div class="">
+                    <h6 class="leadingLine text-nav text-muted mb-5">
+                        Analysis
                     </h6>
                     <h6 class="playFair mb-5">
-                        Coming soon
+                        We started by developing a proto-persona.
                     </h6>
                     <div class="d-flex">
-                        <div class="col-md-7">
-                            <p class="">
-                                Coming soon
-                            </p>
-                        </div>
-                        <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG">
+                        <div class="col-md-3"></div>
+                        <div class="col-md-6"></div>
+                        <div class="col-md-3"></div>
                     </div>
                 </div>
             </div>
         </section>
 
         <!-- Ideation ######################-->
-        <section id="TD_Ideation">
-            <div class="container px-4 px-lg-5 d-flex">
+        <section style="padding: 9.375rem 0;" id="TD_Ideation">
+            <div class="container px-4 px-lg-5">
                 <div class="">
                     <h6 class="leadingLine text-nav text-muted mb-5">
                         Ideation
-                    </h6>
-                    <h6 class="playFair mb-5">
-                        Coming soon
-                    </h6>
-                    <div class="d-flex">
-                        <img src="../assets/img/UX_VTP/undraw_newspaper_re_syf5.svg" alt="" class="col-md-5 align-self-end imgSVG">
-                        <div class="col-md-1"></div>
-                        <div class="col-md-6 align-self-center">
-                            <p class="">
-                                Coming soon                          
-                            </br>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Analysis ######################-->
-        <section style="padding: 9.375rem 0;">
-            <div class="container px-4 px-lg-5" id="TD_Analysis">
-                <div class="">
-                    <h6 class="leadingLine text-nav text-muted mb-5">
-                        Analysis
                     </h6>
                     <h6 class="playFair mb-5 mb-5">
                         Coming soon
