fixed mobile view

--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -163,9 +163,9 @@
                     <h6 class="playFair mb-5 pb-4">
                         We started by developing a proto-persona.
                     </h6>
-                    <div class="d-flex justify-content-center mb-5">
-                        <div class="col-md-3 align-items-center my-auto">
-                            <div class="py-4">
+                    <div class="d-flex justify-content-center mb-5 row">
+                        <div class="order-1 order-lg-0 col-lg-3 align-items-center my-auto">
+                            <div class="pt-5 pb-1 py-lg-4">
                                 <p>
                                     <b>Name:</b> Williams T. Franklin <br>
                                     <b>Age:</b> 36 years old <br>
@@ -174,7 +174,7 @@
                                     <b>Location:</b> Long Island, NY
                                 </p>
                             </div>
-                            <div class="py-4">
+                            <div class="py-1 py-lg-4">
                                 <p>
                                     <b>Goals & Needs:</b>
                                     <ul>
@@ -186,11 +186,11 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-md-5 row px-5">
-                            <img src="../assets/img/UX_TD/jacinto-diego-5kkRYf5oeuA-unsplash.jpg" alt="" class="px-0 shadow rounded-3">
+                        <div class="order-0 order-lg-1 col-11 col-md-8 col-lg-5 px-5">
+                            <img src="../assets/img/UX_TD/jacinto-diego-5kkRYf5oeuA-unsplash.jpg" alt="" class="img-fluid px-0 shadow rounded-3">
                         </div>
-                        <div class="col-md-3 align-items-center my-auto">
-                            <div class="py-4">
+                        <div class="order-2 order-lg-2 col-lg-3 align-items-center my-auto">
+                            <div class="py-1 py-lg-4">
                                 <p>
                                     <b>Pain Points:</b>
                                     <ul>
@@ -200,7 +200,7 @@
                                     </ul>
                                 </p>
                             </div>
-                            <div class="py-4">
+                            <div class="py-1 py-lg-4">
                                 <p>
                                     <b>Solutions & Gains</b>
                                     <ul>
@@ -214,13 +214,13 @@
                     </div>
 
                     <!-- User Path -->
-                    <div class="mx-auto col-md-8 my-5 pt-5">
+                    <div class="mx-auto col-md-8 my-5 pt-0 pt-lg-5">
                         <p class="pt-5 mt-5">After deciding to focus on the individual invest, we were able to determine a <b>typical user path</b> for our proto-persona to focus on (ie. Passive income, retirement plan...). </p>
                     </div>
                     <img src="../assets/img/UX_TD/UX_TD_UserPath.png" alt="" class="img-fluid">
                     
                     <!-- Heuristic eval -->
-                    <div class="mx-auto col-md-8 mt-5 pt-5">
+                    <div class="mx-auto col-md-8 mt-5 pt-0 pt-lg-5">
                         <p class="pt-5">We then completed a <b>heuristic evaluation</b> of the current site to redline annotate the current problems with accessibility, design, and other issues. Our next step was to <b>interview 5 individuals who would be a typical user</b> of this site and organize our findings based on importance to the user and government agency using Figjam.</p>
                     </div>
                     <img src="../assets/img/UX_TD/UX_TD_Heuristic.png" alt="" class="img-fluid">
