Finished with TreasuryDirect

--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -69,10 +69,10 @@
                                     <div class="col-md-7 order-1 order-md-0 mt-3 mt-md-0">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#projects">UX Case studies</a></li>
+                                            <li><a class="dropdown-item" href="#">ChaseWick.com</a></li>
                                             <li><a class="dropdown-item" href="#">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="UX_TD.html">TreasuryDirect.gov</a></li>
                                             <li><a class="dropdown-item" href="UX_AFA.html">ArtsForAll.com</a></li>
-                                            <li><a class="dropdown-item" href="#">Odysseia</a></li>
                                         </ul>
                                     </div>
 
@@ -335,8 +335,12 @@
                 </div>
             </div>
 
-            <div class="mb-sm-4 UXCaseSwap justify-content-end">
+            <div class="mb-sm-4 UXCaseSwap">
                 <div class="pt-5 pt-sm-0">
+                    <p>Previous:</p>
+                    <a class="hvr-sweep" href="">ChaseWick.com</a>
+                </div>
+                <div class="pt-4 pt-sm-0">
                     <p>Next:</p>
                     <a class="hvr-sweep" href="./UX_TD.html">TreasuryDirect.gov</a>
                 </div>
