--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                                     <div class="col-md-7 order-1 order-md-0 mt-3 mt-md-0">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="#projects">UX Case studies</a></li>
+                                            <li><a class="dropdown-item" href="#">ChaseWick.com</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_TD.html">TreasuryDirect.gov</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_AFA.html">ArtsForAll.com</a></li>
-                                            <li><a class="dropdown-item" href="#">Odysseia</a></li>
                                         </ul>
                                     </div>
     
@@ -113,6 +113,28 @@
                 <h6 class="leadingLine text-nav text-muted mb-5 pb-5 pb-lg-0 mb-lg-6">
                     Featured Projects
                 </h6>
+
+                <!-- ChaseWick.com -->
+                <div class="row gx-0 UXCase">
+                    <div class="order-1 order-lg-0 col-xl-6 col-lg-6">
+                        <div class="featured-text-left">
+                            <h4 class="UXCaseTitle">ChaseWick.com</h4>
+                            <p class="text-black-50 mb-sm-4">A traveling app to help users enjoy their vacation while staying safe from Covid, by providing real time updates of health and safety requirements.</p>
+                            <div class="UXCaseLabel mb-sm-4">
+                                <p>UX/UI</p>
+                                <p>Research</p>
+                                <p>Design System</p>
+                                <p>Github</p>
+                            </div>
+                            <a class="hvr-sweep UXCaseButton" href="">Coming Soon</a>
+                        </div>
+                    </div>
+                    <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
+                        <a>
+                            <img class="img-fluid UXCaseImg mb-4" src="./assets/img/ArtsForAll_HALF.png" alt="..." />
+                        </a>
+                    </div>
+                </div>
                 <!-- Virtual Teaching Platform-->
                 <div class="row gx-0 UXCase">
                     <div class="order-0 order-lg-0 col-xl-6 col-lg-6">
@@ -176,28 +198,6 @@
                             </div>
                             <a class="hvr-sweep UXCaseButton" href="./CaseStudies/UX_AFA.html">View Case Study</a>
                         </div>
-                    </div>
-                </div>
-
-                <!-- Odysseia -->
-                <div class="row gx-0 UXCase">
-                    <div class="order-1 order-lg-0 col-xl-6 col-lg-6">
-                        <div class="featured-text-left">
-                            <h4 class="UXCaseTitle">Odysseia</h4>
-                            <p class="text-black-50 mb-sm-4">A traveling app to help users enjoy their vacation while staying safe from Covid, by providing real time updates of health and safety requirements.</p>
-                            <div class="UXCaseLabel mb-sm-4">
-                                <p>UX</p>
-                                <p>Research</p>
-                                <p>Design System</p>
-                                <p>Mobile App</p>
-                            </div>
-                            <a class="hvr-sweep UXCaseButton" href="">View Case Study</a>
-                        </div>
-                    </div>
-                    <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
-                        <a>
-                            <img class="img-fluid UXCaseImg mb-4" src="./assets/img/ArtsForAll_HALF.png" alt="..." />
-                        </a>
                     </div>
                 </div>
             </div>
