--- a/About.html
+++ b/About.html
@@ -69,10 +69,10 @@
                                     <div class="col-md-7 order-1 order-md-0 mt-3 mt-md-0">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="index.html#projects">UX Case studies</a></li>
+                                            <li><a class="dropdown-item" href="#">ChaseWick.com</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_TD.html">TreasuryDirect.gov</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_AFA.html">ArtsForAll.com</a></li>
-                                            <li><a class="dropdown-item" href="#">Odysseia</a></li>
                                         </ul>
                                     </div>
 
