Worked on ChaseWick

--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -69,7 +69,7 @@
                                     <div class="col-md-7 order-1 order-md-0 mt-3 mt-md-0">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#projects">UX Case studies</a></li>
-                                            <li><a class="dropdown-item" href="#">ChaseWick.com</a></li>
+                                            <li><a class="dropdown-item" href="UX_CW.html">ChaseWick.com</a></li>
                                             <li><a class="dropdown-item" href="#">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="UX_TD.html">TreasuryDirect.gov</a></li>
                                             <li><a class="dropdown-item" href="UX_AFA.html">ArtsForAll.com</a></li>
@@ -103,13 +103,11 @@
                 <div class="d-flex">
                     <div class="col-md-8">
                         <h1 class="col-md-11 my-0 mb-4">Virtual Teaching Platform</h1>
-                        <h2 class="col-md-8 mt-2">
-                            <p class="mb-2 fw-normal fadeIn-2">
-                                The all-in-one virtual teaching platform for teachers.
-                                <br>
-                                <br>
-                                Virtual teachers have a lot on their plates and have to use multiple resources to plan and teach. With ULearn, teachers have a convienent all-in-one place to help them with all their classroom needs.
-                            </p>
+                        <h2 class="col-md-8 my-2 fw-normal fadeIn-2">
+                            The all-in-one virtual teaching platform for teachers.
+                            <br>
+                            <br>
+                            Virtual teachers have a lot on their plates and have to use multiple resources to plan and teach. With ULearn, teachers have a convienent all-in-one place to help them with all their classroom needs.
                         </h2>
                     </div>
                 </div>
@@ -338,7 +336,7 @@
             <div class="mb-sm-4 UXCaseSwap">
                 <div class="pt-5 pt-sm-0">
                     <p>Previous:</p>
-                    <a class="hvr-sweep" href="">ChaseWick.com</a>
+                    <a class="hvr-sweep" href="./UX_CW.html">ChaseWick.com</a>
                 </div>
                 <div class="pt-4 pt-sm-0">
                     <p>Next:</p>
