--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <div class="row mainDropdown">
                                     <div class="col-md-7 order-1 order-md-0 mt-3 mt-md-0">
                                         <ul class="list-unstyled">
-                                            <li><a class="dropdown-item dropDownCat" href="#projects">UX Case studies</a></li>
+                                            <li><a class="dropdown-item dropDownCat" href="./CaseStudies/UX_CW.html">UX Case studies</a></li>
                                             <li><a class="dropdown-item" href="#">ChaseWick.com</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_TD.html">TreasuryDirect.gov</a></li>
@@ -119,18 +119,18 @@
                     <div class="order-1 order-lg-0 col-xl-6 col-lg-6">
                         <div class="featured-text-left">
                             <h4 class="UXCaseTitle">ChaseWick.com</h4>
-                            <p class="text-black-50 mb-sm-4">A traveling app to help users enjoy their vacation while staying safe from Covid, by providing real time updates of health and safety requirements.</p>
+                            <p class="text-black-50 mb-sm-4"> E-Commerce Website focused on providing you with a variety of candles; both scented and unscented, utility and novelty, retail and bulk, informative and pleasantry.</p>
                             <div class="UXCaseLabel mb-sm-4">
                                 <p>UX/UI</p>
                                 <p>Research</p>
                                 <p>Design System</p>
                                 <p>Github</p>
                             </div>
-                            <a class="hvr-sweep UXCaseButton" href="">Coming Soon</a>
+                            <a class="hvr-sweep UXCaseButton" href="./CaseStudies/UX_CW.html">View Case Study</a>
                         </div>
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
-                        <a>
+                        <a href="./CaseStudies/UX_CW.html">
                             <img class="img-fluid UXCaseImg mb-4" src="./assets/img/ChaseWick_HALF.png" alt="..." />
                         </a>
                     </div>
