--- a/CaseStudies/UX_AFA.html
+++ b/CaseStudies/UX_AFA.html
@@ -69,7 +69,7 @@
                                     <div class="col-md-7 order-1 order-md-0 mt-3 mt-md-0">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#projects">UX Case studies</a></li>
-                                            <li><a class="dropdown-item" href="#">ChaseWick.com</a></li>
+                                            <li><a class="dropdown-item" href="UX_CW.html">ChaseWick.com</a></li>
                                             <li><a class="dropdown-item" href="UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="UX_TD.html">TreasuryDirect.gov</a></li>
                                             <li><a class="dropdown-item" href="#">ArtsForAll.com</a></li>
@@ -103,10 +103,8 @@
                 <div class="d-flex">
                     <div class="col-md-10">
                         <h1 class="my-0 mb-4">ArtsForAll.com</h1>
-                        <h2 class="mt-2 col-lg-6 col-md-8">
-                            <p class="mb-2 fw-normal fadeIn-2">
-                                Non-profit organization that offers accessible artistic opportunities to children in the New York City area who face socio-economic, physical, or emotional barriers to exploring the arts. 
-                            </p>
+                        <h2 class="my-2 col-lg-6 col-md-8 fw-normal fadeIn-2">
+                            Non-profit organization that offers accessible artistic opportunities to children in the New York City area who face socio-economic, physical, or emotional barriers to exploring the arts. 
                         </h2>
                     </div>
                 </div>
