--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -69,7 +69,7 @@
                                     <div class="col-md-7 order-1 order-md-0 mt-3 mt-md-0">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#projects">UX Case studies</a></li>
-                                            <li><a class="dropdown-item" href="#">ChaseWick.com</a></li>
+                                            <li><a class="dropdown-item" href="UX_CW.html">ChaseWick.com</a></li>
                                             <li><a class="dropdown-item" href="UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="#">TreasuryDirect.gov</a></li>
                                             <li><a class="dropdown-item" href="UX_AFA.html">ArtsForAll.com</a></li>
@@ -103,13 +103,11 @@
                 <div class="d-flex">
                     <div class="">
                         <h1 class="col-auto my-0 mb-4">TreasuryDirect.gov</h1>
-                        <h2 class="mt-2 col-lg-6 col-md-8">
-                            <p class="mb-2 fw-normal fadeIn-2">
-                                An updated web and mobile design for TreasuryDirect.gov website.
-                                <br>
-                                <br>
-                                TreasuryDirect is the first and only financial services website that lets individuals buy and redeem securities directly from the U.S. Department of the Treasury in paperless electronic form.
-                            </p>
+                        <h2 class="my-2 col-lg-6 col-md-8 fw-normal fadeIn-2">
+                            An updated web and mobile design for TreasuryDirect.gov website.
+                            <br>
+                            <br>
+                            TreasuryDirect is the first and only financial services website that lets individuals buy and redeem securities directly from the U.S. Department of the Treasury in paperless electronic form.
                         </h2>
                     </div>
                 </div>
