fixed linking issue

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                                 <div class="row mainDropdown">
                                     <div class="col-md-7 order-1 order-md-0 mt-3 mt-md-0">
                                         <ul class="list-unstyled">
-                                            <li><a class="dropdown-item dropDownCat" href="./CaseStudies/UX_CW.html">UX Case studies</a></li>
-                                            <li><a class="dropdown-item" href="#">ChaseWick.com</a></li>
+                                            <li><a class="dropdown-item dropDownCat" href="#projects">UX Case studies</a></li>
+                                            <li><a class="dropdown-item" href="./CaseStudies/UX_CW.html">ChaseWick.com</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_TD.html">TreasuryDirect.gov</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_AFA.html">ArtsForAll.com</a></li>
