--- a/CaseStudies/UX_CW.html
+++ b/CaseStudies/UX_CW.html
@@ -296,7 +296,7 @@
                 </div>
             </div>
 
-            <div class="mb-sm-4 UXCaseSwap">
+            <div class="mb-sm-4 UXCaseSwap justify-content-end">
                 <div class="pt-4 pt-sm-0">
                     <p>Next:</p>
                     <a class="hvr-sweep" href="./UX_VTP.html">Virtual Teaching Platform</a>
