Continued working on ChaseWick

--- a/CaseStudies/UX_CW.html
+++ b/CaseStudies/UX_CW.html
@@ -183,7 +183,7 @@
                     <h6 class="playFair mt-5 pt-5">
                         User interviews give us better understanding when it comes to consumers.
                     </h6>
-                    <div class="col-lg-9 mx-auto pt-5">
+                    <div class="col-lg-9 mx-auto pt-3">
                         We conducted a total of 4 user interviews to see what people like when it comes to candles and how they prefer to purchase them. These interviews helped us learn more about what people want when it comes to price, scent types, how long they last, if they would prefer a monthly subscription or not, if they care about a percentage of the price going to charity or if they would be interested in recycling or not. 
                     </div>
             </div>
@@ -204,13 +204,16 @@
                     <div class="col-lg-9 mx-auto">
                             Consisting of the reasons our customers would buy our product, what kind of description they prefer them to have, and if they would just buy them once or prefer a monthly subscription. This data collected allowed us to analyze how to set up or site even more. 
                     </div>
-                    <div class="col-lg-10 mx-auto py-lg-5">
+                    <div class="col-lg-10 mx-auto py-5">
                         <img src="../assets/img/UX_CW/UX_CW_Affinity.png" alt="" class="img-fluid">
                     </div>
 
                     <!-- Empathy Map -->
-                    <div class="col-lg-9 mx-auto mt-5 pt-5">
-                        <b>Empathy map</b> allowed us to evaluate what our customers might do, say, think or feel about our website and product. Under the “feel” section, we were able to see the Pains and Gains of our possible future customers. 
+                    <h6 class="playFair mt-5 pt-5">
+                        Empathy Map
+                    </h6>
+                    <div class="mt-4 mt-md-0 pt-4 col-lg-8">
+                        allowed us to evaluate what our customers might do, say, think or feel about our website and product. Under the “feel” section, we were able to see the Pains and Gains of our possible future customers.
                     </div>
                     <div class="col-lg-9 mx-auto py-5">
                         <img src="../assets/img/UX_CW/UX_CW_EmpathyMap.svg" alt="" class="img-fluid">
@@ -223,8 +226,31 @@
                     <div class="col-lg-9 mx-auto">
                         Candles are a unique item that everyone pretty much loves and buys. We wanted a user persona that fits right in the middle demographic of a candle buyer. John Doe is a single, 27 male that works at Starbucks. He buys candles for personal use when he wants his place to smell good but sometimes as he buys them as gifts. He typically buys them at retail stores while shopping for other items. 
                     </div>
-                    <div class="col-lg-10 mx-auto pt-5">
+                    <div class="col-lg-10 mx-auto py-5">
                         <img src="../assets/img/UX_CW/UX_CW_UserPersona.png" alt="" class="img-fluid">
+                    </div>
+
+                    <!-- User Insight -->
+                    <div class="d-block d-md-flex align-items-start my-5 gap-4 pt-lg-5">
+                        <h6 class="playFair">
+                            User Insight
+                        </h6>
+                        <div class="mt-4 mt-md-0 fst-italic">
+                            <p>"During the interviews, we discovered that scent, description of candle, and price are most important.</p>
+                            <p>Therefore, we believe that candle shopping website would help the consumers in picking the perfect gifts or personal use items practically.</p>
+                            <p>We might do this by offering descriptive details, comparisons between different products, subscription service, and gift wrapping. Doing this will allow our product to reach the needs of people seeking to buy candles for gift purposes and/or personal use."</p>
+                        </div>
+                    </div>
+    
+                    <!-- Problem Statement -->
+                    <div class="d-block d-md-flex align-items-start my-5 gap-4 pt-lg-5">
+                        <h6 class="playFair">
+                            Problem Statement
+                        </h6>
+                        <div class="mt-4 mt-md-0 fst-italic">
+                            <p>"Our website was designed to achieve an all-in-one shopping experience for candles. We have observed that local retailers do not provide all the services that our website could and with limited options.</p>
+                            <p>How might we improve our website so that our customers are more willing to shop online?"</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -236,11 +262,79 @@
                 <h6 class="leadingLine text-nav text-muted mb-5">
                     Ideation
                 </h6>
-                <h6 class="playFair mb-5 mb-5">
-                    Coming soon
-                </h6>
-                <div class="mb-5 col-md-9 mx-auto">
-                    Coming soon
+
+                <!-- User Scenario -->
+                <div class="d-flex row align-items-center pb-lg-5">
+                    <div class="col-lg-7">
+                        <p>Reflecting our problem statement, we <b>set up a scenario</b> where our user John Doe is trying to pick up some candles for himself and his mother.</p>
+                        <p>He starts by shopping at a Target, but fails to find a candle that fits his criteria. After receiving a recommendation to check out ChaseWick.com, John finds a wide variety of candles, and some interesting options to have them gift-wrapped. This allows him to find just the right candle for his mother and have it look nice as he presents it to her.</p>
+                    </div>
+                    <div class="col-lg-5 opacity-75">
+                        <img src="../assets/img/UX_CW/undraw_gift_re_qr17.svg" alt="" class="img-fluid imgSVG">
+                    </div>
+                </div>
+
+                <!-- User Journey Map -->
+                <div class="d-block d-md-flex align-items-start mt-5 gap-4 pt-lg-5 col-lg-10 mx-auto">
+                    <h6 class="playFair">
+                        User Journey Map
+                    </h6>
+                    <div class="mt-4 mt-md-0">
+                        <p>We also studied the process of purchasing a candle in a storefront, as physical candle stores will remain a major competitor to our site, seeing as you cannot smell a candle through a computer screen.</p>
+                        <p>We posited that the process of perusing and purchasing candles is largely a positive experience, although the usage of the candle is most likely the best part. Our goal with Chasewick was to try and make a shopping experience that is equally pleasant.</p>
+                    </div>
+                </div>
+                <img src="../assets/img/UX_CW/UX_CW_UserJourneyMap.png" alt="" class="img-fluid py-5 mb-5">
+
+                <!-- Site Map -->
+                <div class="d-block d-md-flex align-items-start mt-5 gap-4 pt-lg-5 col-lg-10 mx-auto">
+                    <h6 class="playFair">
+                        Site Map
+                    </h6>
+                    <div class="mt-4 mt-md-0">
+                        <p>Our focus on the shopping process went into our development of the site map, where we planned our prototype.</p>
+                        <p>Largely we focused on what would be needed on every page, which is the navbar and footer. Knowing this would be used as the foundation of our prototype, we condensed our points in the bottom right corner into two sections: features available and pages required.</p>
+                    </div>
+                </div>
+                <div class="pt-3 py-5 mb-5">
+                    <img src="../assets/img/UX_CW/UX_CW_Mindmap.png" alt="" class="img-fluid">
+                </div>
+
+                <!-- User Flow -->
+                <div class="d-block d-md-flex align-items-start mt-5 gap-4 pt-lg-5 col-lg-10 mx-auto">
+                    <h6 class="playFair">
+                        User Flow
+                    </h6>
+                    <div class="mt-4 mt-md-0">
+                        <p>Namely, our user flow, which depicts how somebody such as our John Doe may go through the website. Starting from the home page, looking through some specifically pointed-out candles, reading through multiple product pages, and then finally going through the process of buying one of the candles.</p>
+                    </div>
+                </div>
+                <div class="pt-3 row col-lg-9 mx-auto d-none d-md-block">
+                    <img src="../assets/img/UX_CW/UX_CW_UserFlowHuge.svg" alt="" class="img-fluid">
+                </div>
+
+                <!-- Mobile collapse button -->
+                <div class="justify-content-center mx-auto d-block d-sm-none pt-4">
+                    <p>
+                        <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCW" aria-expanded="false" aria-controls="collapseCW">
+                          More details
+                        </button>
+                    </p>
+                    <div class="collapse" id="collapseCW">
+                        <ol class="card card-body gap-2">
+                            <li>Starts at Homepage</li>
+                            <li>Browses the carousel</li>
+                            <li>Browses through current promotions</li>
+                            <li>Picks a random product</li>
+                            <li>Reads through the description</li>
+                            <li>Picks 2 more candles</li>
+                            <li>Compares the 3 choices</li>
+                            <li>Adds the one he likes most to cart</li>
+                            <li>Goes to checkout</li>
+                            <li>Adds gift-wrap options</li>
+                            <li>Finalizes the purchase</li>
+                        </ol>
+                    </div>
                 </div>
             </div>
         </section>
@@ -251,8 +345,32 @@
                 <h6 class="leadingLine text-nav text-muted mb-5">
                     Prototyping
                 </h6>
-                <div class="mb-5 col-md-9 mx-auto">
-                    Coming soon
+
+                <!-- Moodboard -->
+                <div class="d-block d-md-flex align-items-start mt-5 gap-4 pt-lg-5 col-lg-10 mx-auto">
+                    <h6 class="playFair">
+                        Moodboard
+                    </h6>
+                    <div class="mt-4 mt-md-0">
+                        <p>The first thing we did before sketching was make a moodboard. We chose sites such as Target, Coastline Soap, and IKEA for useful points of inspiration. We also picked a few images for a general mood to the site as well as a potential color scheme.</p>
+                    </div>
+                </div>
+                <div class="pt-3 row col-lg-9 mx-auto py-5 mb-5">
+                    <img src="../assets/img/UX_CW/UX_CW_Moodboard.png" alt="" class="img-fluid">
+                </div>
+
+                <!-- Lo-fidelity -->
+                <div class="d-block d-md-flex align-items-start mt-5 gap-4 pt-lg-5 col-lg-10 mx-auto">
+                    <h6 class="playFair">
+                        Lo-fidelity
+                    </h6>
+                    <div class="mt-4 mt-md-0">
+                        <p>The most important step during the prototyping phase. At this point we visualized how the site would look and how we would execute all the researches into the layout of the website.</p>
+                        <p>We started with the Mobile version first due to the real estate constrain. If we could translate all the researches to fit the mobile screen, the Desktop version would become a fancy playground.</p>
+                    </div>
+                </div>
+                <div class="pt-3 row">
+                    <img src="../assets/img/UX_CW/UX_CW_LoFi.png" alt="" class="img-fluid">
                 </div>
             </div>
         </section>
@@ -286,13 +404,26 @@
                             </h6>
                             <div class="col-md-9 pb-5 mx-auto">
                                 <p>With ChaseWick completed, we learned a great deal especially when it comes to E-commerce. Our site is running and responsive, which taught us a lot about how UI developers work and what they need from designers. It also opened our eyes to how to work as a team, not just designing, but working together with coding - and being careful not to override each others iterations to the site.</p>
-                                <p>In the future we hope to add working videos, implement chatbots to help users with common questions, and continue improving the website.</p>
+                                <p>In the future we hope to add working videos, add more individual product pages, work on the Subscription Page, and continue improving the website.</p>
                             </div>
                         </div>
                     </div>
                     <h6 class="leadingLine text-nav text-muted my-5">
                         Final Prototype
                     </h6>
+                    <div class="col-lg-9 mx-auto row">
+                        <h6>Follow along with these tasks</h6>
+                        <ol>
+                            <li>Explore the Home Page</li>
+                            <li>Navigate to the "Shop by Scent" page</li>
+                            <li>Browse detail description of Brown Candle</li>
+                            <li>Buy one Brown Candle and proceed to checkout</li>
+                        </ol>
+                        <p class="fw-bold py-4">click on the QR to check out the Final Product, or you can scan with your phone to check out the Mobile version</p>
+                        <a href="https://kaider.github.io/ChaseWick/" target="_blank" class="col-8 col-sm-4 mx-auto">
+                            <img src="../assets/img/UX_CW/UX_CW_FinalQR.png" alt="" class="img-fluid">
+                        </a>
+                    </div>
                 </div>
             </div>
 
